--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.6",
-		"tom-lingham/searchy" : "2.*"
+        "nicolaslopezj/searchable": "1.*",
+        "tom-lingham/searchy": "2.*"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
