--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,12 @@
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+			"app/repositories",
+			"app/repositories/chart",
+			"app/repositories/cryptocurrency",
+			"app/repositories/portfolio",
+			"app/services"
         ],
         "psr-4": {
             "App\\": "app/"
